# py-to-libtorch-example

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
docs/: jupyter.md
python/: SavePytorchModel.ipynb
src/: GAN.cpp
